# icinga2

./: CMakeLists.txt
.vagrant-puppet/modules/nsca-ng/manifests/: init.pp
doc/: 5-configuring-icinga-2.md
etc/icinga2/features-available/: ido-sqlsrv.conf
lib/: CMakeLists.txt
lib/base/: application.cpp  application.h
lib/db_ido_sqlsrv/: CMakeLists.txt  idosqlsrvconnection.cpp  idosqlsrvconnection.hpp  idosqlsrvconnection.ti
lib/db_ido_sqlsrv/schema/: sqlsrv.sql
lib/icinga/: CMakeLists.txt  icinga-type.conf  scheduleddowntime.cpp  scheduleddowntime.h  scheduleddowntime.ti  service-downtime.cpp  service.cpp  service.h  service.ti
